# InfEge

./: .gitignore  17.txt  2-15128.py  2-15830_Отрезки_с_логикой  2-17320.py  2-18495.py  2-27421_файлы_поиск_подстроки.py  2-27768_две_кучи.py  2-27770_кучи2.py  2-36873_файлы_таблицы.py  2-39764_работа_с_файлами  2-4657-рекурсия.py  2-48384-системы_исчисления.py  2_tip_with_comment.py  3-17320_логическая_функция.py  3-6-47406.py  CMakeLists.txt  README.md  Tip14-16391.py  Tip14-48402.py  Tip15-15955.py  Tip16-12248.py  Tip2-12234.py  Tip2-17320.py  Tip23-15144.py  Tip5-56533.py  Tip6-12238.py  Tip6-47406.py  Tip8-26953.py  copy1.py  desktop.ini  inf_26_04_21_18.txt  passGen.py  tip2.py  tmp.py  translate_164.py  translate_numeric_system.py  Взлом RSA.py  Все_комбинации.py  Вывод в рамку случайных цифр.py  (+10 more)
API/: local_server.py  test_request.py
Olympiada/: ITMO-1-2021.py  ITMO-DDoS-ataka.py  ITMO-zakl-1.py  MOSH-invert.py  MOSH2024-E-str2.py  MOSH2024-E-str3.py  MOSH2024-E.py  PythonApplication1.py  contest_1909_B.cpp  olymp-problem.py  translate_fract.py  webserver.py  Использование Хештаблиц.py  Ответы на МОШ.txt  Перемещение_робота_по_4_точкам.py  Проксима_Центавра.py
Telegram_bot/: bot2.py  bot3.py  ini_work.py  minimalize_bot.py  Перевод символа в 8-ричный код.py
Tip10/: 63059
Tip12/: 10388.py  13490.py  17332.py  17378.py  23912.py  35901.py  48433.py  55599.py  63028.py  9365.py  Tip12-10290.py  Tip12-12244.py  Tip12-15109.py  Tip12-18495.py  Tip12-18716.py  Tip12-26957.py  Tip12-27543.py  Tip12-3063.py  Tip12-35901.py  Tip12-48433.py  Tip12-60254.py  (+4 more)
(+614 files in other folders)
