cmake_minimum_required(VERSION 3.22)
project(InfEge)

set(CMAKE_CXX_STANDARD 20)

add_executable(48423 Tip2/48423.cpp)
add_executable(5680 Tip27/5680.cpp)
add_executable(contest_1909_B Olympiada/contest_1909_B.cpp)

add_executable(27883 Tip26/27883.cpp)
add_executable(27880 Tip26/27880.cpp)
add_executable(test1 tests/test1.cpp)
add_executable(33772 Tip27/33772.cpp)