cmake_minimum_required(VERSION 3.22)
project(InfEge)

set(CMAKE_CXX_STANDARD 20)

add_executable(48423 Tip2/48423.cpp)
add_executable(5680 Tip27/5680.cpp)
add_executable(contest_1909_B Olympiada/contest_1909_B.cpp)

add_executable(27883 Tip26/27883.cpp)
add_executable(27880 Tip26/27880.cpp)
add_executable(test1 tests/test1.cpp)
add_executable(33772 Tip27/33772.cpp)
add_executable(58494 Tip27/58494.cpp)
add_executable(39256 Tip27/39256.cpp)
add_executable(46985 Tip27/46985.cpp)
add_executable(27424 Tip27/27424.cpp)
add_executable(59825 Tip27/59825.cpp)
add_executable(59854 Tip27/59854.cpp)
add_executable(26-16006829 variants/16006829/26-16006829.cpp)
add_executable(27-16006829 variants/16006829/27-16006829.cpp)
add_executable(37162 Tip27/37162.cpp)
add_executable(28131 Tip27/28131.cpp)
add_executable(64957 Tip27/64957.cpp)
add_executable(27-16006836 variants/16006836/27-16006836.cpp)
add_executable(26-16006836 variants/16006836/26-16006836.cpp)